--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@babel/core": "^7.24.4",
         "@babel/preset-env": "^7.24.4",
         "babel-loader": "^9.1.3",
+        "dotenv-webpack": "^8.1.0",
         "eslint": "^9.1.0",
         "file-loader": "^6.2.0",
         "html-webpack-plugin": "^5.6.0",
